--- a/templates/result.html
+++ b/templates/result.html
@@ -11,3 +11,6 @@
     <h1>Prediction Result</h1>
     <p>The predicted alert category is: {{ prediction }}</p>
     <a href="/">Go back to home</a>
+</body>
+
+</html>
