--- a/templates/index.html
+++ b/templates/index.html
@@ -87,7 +87,8 @@
                     data: [],
                     borderColor: 'blue',
                     borderWidth: 1,
-                    fill: false
+                    fill: false,
+                    tension: 0
                 }]
             },
             options: {
