--- a/templates/index.html
+++ b/templates/index.html
@@ -63,6 +63,9 @@
             <li><a href="/input_fields">Temperature</a></li>
             <li><a href="#contact">Contact</a></li>
             <li><a href="#about">About</a></li>
+            {% if person.is_logged_in %}
+            <li style="float:right;"><a href="{{ url_for('logout') }}">Logout, {{ person.name }}</a></li>
+            {% endif %}
         </ul>
     </nav>
     <div id="chart-container">
