--- a/templates/index.html
+++ b/templates/index.html
@@ -61,8 +61,8 @@
         <ul>
             <li><a class="active" href="/">Home</a></li>
             <li><a href="/input_fields">Temperature</a></li>
-            <li><a href="#contact">Contact</a></li>
-            <li><a href="#about">About</a></li>
+            <li><a href="#contact">Sensors</a></li>
+            <li><a href="#about">Your Sensors</a></li>
             {% if person.is_logged_in %}
             <li style="float:right;"><a href="{{ url_for('logout') }}">Logout, {{ person.name }}</a></li>
             {% endif %}
