--- a/templates/sensors.html
+++ b/templates/sensors.html
@@ -53,12 +53,37 @@
         </ul>
     </nav>
     <h1>List of Sensors</h1>
-    <a href="#">DHT</a>
-    <a href="#">MPU</a>
+    <a href="/dht_sensor">DHT</a>
+    <a href="/mpu_sensor">MPU</a>
 
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.5.2/dist/umd/popper.min.js"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js"></script>
+    <script>
+        // Use JavaScript to dynamically load content when a link is clicked
+        document.addEventListener("DOMContentLoaded", function() {
+            document.querySelectorAll("a").forEach(function(link) {
+                link.addEventListener("click", function(event) {
+                    event.preventDefault();
+                    var url = this.getAttribute("href");
+                    loadContent(url);
+                });
+            });
+
+            // Function to load content dynamically
+            function loadContent(url) {
+                fetch(url)
+                    .then(response => response.text())
+                    .then(html => {
+                        // Replace the content of the body with the loaded HTML
+                        document.body.innerHTML = html;
+                        // Add the fetched URL to the browser's history
+                        window.history.pushState(null, null, url);
+                    })
+                    .catch(error => console.error("Error loading content:", error));
+            }
+        });
+    </script>
 </body>
 
 </html>
