--- a/templates/dhtSensor.html
+++ b/templates/dhtSensor.html
@@ -50,7 +50,7 @@
             /* Use 100% width for responsiveness */
             max-width: 600px;
             /* Set a maximum width for each chart */
-            margin: 20px;
+            margin: 20px 0 20px 20px;
             /* Add some margin between charts */
         }
     </style>
