--- a/templates/sensors.html
+++ b/templates/sensors.html
@@ -37,6 +37,22 @@
         .active {
             background-color: #04AA6D;
         }
+        
+        a.sensor-link {
+            display: inline-block;
+            background-color: #007bff;
+            color: #fff;
+            padding: 10px;
+            margin: 10px;
+            text-align: center;
+            text-decoration: none;
+            border-radius: 5px;
+            transition: background-color 0.3s;
+        }
+        
+        a.sensor-link:hover {
+            background-color: #0056b3;
+        }
     </style>
 </head>
 
@@ -53,8 +69,8 @@
         </ul>
     </nav>
     <h1>List of Sensors</h1>
-    <a href="/dht_sensor">DHT</a>
-    <a href="/mpu_sensor">MPU</a>
+    <a href="/dht_sensor" class="sensor-link">DHT</a>
+    <a href="/mpu_sensor" class="sensor-link">MPU</a>
 
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.5.2/dist/umd/popper.min.js"></script>
