--- a/templates/yourSensor_DHT.html
+++ b/templates/yourSensor_DHT.html
@@ -1,5 +1,3 @@
-<!-- sensors.html -->
-
 <!DOCTYPE html>
 <html lang="en">
 
@@ -136,124 +134,15 @@
         </div>
 
     </header>
-
     <div class="main">
         <div class="container">
-            <h2 class="h2">List of Sensors</h2>
+            <h2 class="h2">Alert</h2>
             <div class="blog">
-                <button class="blog-topic text-large" onclick="window.location.href='/dht_sensor'">DHT</button>
-                <button class="blog-topic text-large" onclick="window.location.href='/mpu_sensor'">MPU</button>
-
-
-                <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
-                <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.5.2/dist/umd/popper.min.js"></script>
-                <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js"></script>
-                <script>
-                    // Use JavaScript to dynamically load content when a link is clicked
-                    document.addEventListener("DOMContentLoaded", function() {
-                        document.querySelectorAll("a").forEach(function(link) {
-                            link.addEventListener("click", function(event) {
-                                event.preventDefault();
-                                var url = this.getAttribute("href");
-                                loadContent(url);
-                            });
-                        });
-
-                        // Function to load content dynamically
-                        function loadContent(url) {
-                            fetch(url)
-                                .then(response => response.text())
-                                .then(html => {
-                                    // Replace the content of the body with the loaded HTML
-                                    document.body.innerHTML = html;
-                                    // Add the fetched URL to the browser's history
-                                    window.history.pushState(null, null, url);
-                                })
-                                .catch(error => console.error("Error loading content:", error));
-                        }
-                    });
-                </script>
+                <button class="btn btn-danger">Alert</button>
             </div>
         </div>
     </div>
 
-    <footer>
-
-        <div class="container">
-
-            <div class="wrapper">
-
-                <!-- <a href="#" class="footer-logo">
-                    <img src="/static/images/rakshanetra.png" alt="SimpleBlog Logo" width="150" class="logo-light">
-                    <img src="/static/images/rakshanetra.png" alt="SimpleBlog Logo" width="150" class="logo-dark">
-                </a> -->
-
-                <p class="footer-text">
-                    "Discover the pillars of our disaster management system: Embrace the fusion of Web accessibility, optimum Web performance, and seamless Database management, integrated with cutting-edge IoT sensors for enhanced real-time monitoring."
-                </p>
-
-            </div>
-
-            <div class="wrapper">
-
-                <p class="footer-title">Quick Links</p>
-
-                <ul>
-
-                    <li>
-                        <a href="#" class="footer-link">Advertise with us</a>
-                    </li>
-
-                    <li>
-                        <a href="#" class="footer-link">About Us</a>
-                    </li>
-
-                    <li>
-                        <a href="#" class="footer-link">Contact Us</a>
-                    </li>
-
-                </ul>
-
-            </div>
-
-            <div class="wrapper">
-
-                <p class="footer-title">Legal Stuff</p>
-
-                <ul>
-
-                    <li>
-                        <a href="#" class="footer-link">Privacy Notice</a>
-                    </li>
-
-                    <li>
-                        <a href="#" class="footer-link">Cookie Policy</a>
-                    </li>
-
-                    <li>
-                        <a href="#" class="footer-link">Terms Of Use</a>
-                    </li>
-
-                </ul>
-
-            </div>
-
-        </div>
-
-        <p class="copyright">
-            &copy; Copyright 2024 <a href="#">RakshaNetra</a>
-        </p>
-
-    </footer>
-
-    <script src="{{ url_for('static', filename='js/script.js') }}"></script>
-
-    <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
-    <script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
-
-    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.5.2/dist/umd/popper.min.js"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js"></script>
 </body>
 
 </html>
