--- a/templates/authority_login.html
+++ b/templates/authority_login.html
@@ -11,20 +11,17 @@
         <div id="formContent">
             <!-- Tabs Titles -->
             <h2 class="active"> Sign In </h2>
-            <a href="http://127.0.0.1:5000/signup">
+            <a href="http://127.0.0.1:5000/authoritysignup">
                 <h2 class="inactive underlineHover">Sign Up </h2>
-            </a>
-            <a href="http://127.0.0.1:5000/authoritylogin">
-                <h2 class="inactive underlineHover">Authority</h2>
             </a>
 
             <!-- Icon -->
             <div class="fadeIn first">
-                <img src="{{ url_for('static', filename = 'user.png') }}" id="icon" alt="User Icon" />
+                <img src="{{ url_for('static', filename = 'govt.png') }}" id="icon" alt="User Icon" />
             </div>
 
             <!-- Login Form -->
-            <form action="http://127.0.0.1:5000/result" method="POST">
+            <form action="http://127.0.0.1:5000/authorityresult" method="POST">
                 <input type="email" id="login" class="fadeIn second" name="email" placeholder="email">
                 <input type="password" id="password" class="fadeIn third" name="pass" placeholder="password">
                 <input type="submit" class="fadeIn fourth" value="Log In">
